--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AUMTech – Smart Tech Solutions</title>
   <link rel="stylesheet" href="style2.css" />
+
 </head>
 <body>
   
   <!-- Header -->
   <header>
-    <div class="logo">AUMTech</div>
+    <!-- <div class="logo">AUMTech</div> -->
+     <div class="logo">
+  <img src="./logo.jpg" alt="AUMTech Logo" class="logo-img" />
+  <span>AUMTech</span>
+</div>
+
     <nav>
       <a href="#home">Home</a>
       <a href="#services">Services</a>
@@ -68,6 +74,7 @@
     </div>
   </section>
 
+  
   <!-- Contact Section -->
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
@@ -84,5 +91,6 @@
   </footer>
 
   <script src="script2.js"></script>
+
 </body>
 </html>
